scss/_navigation.scss
/*--------------------------------------------------------------
5.0 Navigation
--------------------------------------------------------------*/
/*--------------------------------------------------------------
5.1 Links
--------------------------------------------------------------*/
a {
	color: hsl(225,73%,57%);
}
a:visited {
	color: hsl(225,26%,36%);
}
a:hover,
a:focus,
a:active {
	color: midnightblue;
}

/*--------------------------------------------------------------
5.2 Menus
--------------------------------------------------------------*/
.main-navigation {
	clear: both;
	display: block;
	float: left;
	width: 100%;

	> * {
		position:absolute;
		width:50rem;
		max-width:100%;
		top:100%;
		left:-100%;
		transition:all 0.3s;
	}
	&.toggled > * {
		left:0;
	}

	ul.nav-menu {
		list-style:none;
		justify-content:space-between;
		position:relative;

		margin:0;
		padding:$flexLayoutPadding;

		background:$lightOverlay;

		transition:all 0.5s;

		li {
			position:relative;
			border-bottom:1px solid white;

			a {
				text-decoration: none;
			}

			&:last-child {
				border-bottom:0 none;
			}
		}

		ul {
			flex-direction:column;
			background:#fff;

			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
			float: left;
			position: absolute;
			top: $lineheight;
			left: -999em;
			z-index: 99999;

			list-style:none;
			margin:0;

			li {

				border-color:#ccc;

				a {
					display: block;
					width: 200px;
				}

				ul {
					top: 0;
					min-width:$horizontalBase*5;
				}

			}
		}

		li:hover > ul {
			left:0;
			right:0;
			padding-left:$horizontalBase;
			background:#eee;

			ul {
				margin-left:33%;
				top:100%;
				background:#ccc;
				
				ul {
					background:#aaa;
				}
			}
		}
		
	}
}

.site-main .comment-navigation,
.site-main .paging-navigation,
.site-main .post-navigation {
	margin: 0 0 $lineheight;
}
.site-main .comment-navigation {
	overflow: hidden;
}
.site-main .post-navigation,
.site-main .paging-navigation {
	@extend .clear;
}

.comment-navigation .nav-previous,
.paging-navigation .nav-previous,
.post-navigation .nav-previous {
	@extend .alignleft;
	@extend button;
}
.comment-navigation .nav-next,
.paging-navigation .nav-next,
.post-navigation .nav-next {
	@extend .alignright;
	@extend button;
}

